<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quan_li_sinh_vien"
        android:textSize="20sp"
        android:textStyle="bold|normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtMSSV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nhap_ma_so"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtTENSV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nhap_ten_sinh_vien"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtMSSV" />

        <CheckBox
            android:id="@+id/cbNam"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="90dp"
            android:hint="@string/nam"
            android:textColorHint="@color/DarkGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtTENSV" />

        <CheckBox
            android:id="@+id/cbNu"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:hint="@string/nu"
            android:textColorHint="@color/DarkGray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtTENSV" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnThem"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btnbg"
        android:text="@string/them"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnSua" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSua"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/btnbg"
        android:text="@string/sua"
        app:layout_constraintEnd_toStartOf="@+id/btnXoa"
        app:layout_constraintHorizontal_bias="0.011"
        app:layout_constraintStart_toEndOf="@+id/btnThem"
        app:layout_constraintTop_toBottomOf="@+id/edtTENSV" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnXoa"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btnbg"
        android:text="@string/xoa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnSua" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/danh_sach_sinh_vien"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSua" />

    <ListView
        android:id="@+id/lvSinhVien"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>